--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -10,13 +10,14 @@ $pc: 900px;
 html {
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
   font-weight: bold;
+  // margin: 0 auto;
 }
 
 body {
-  // max-width: 860px;
+  max-width: 860px;
   text-align: center;
-  margin: 0 auto;
   color: #333333;
+  margin-left:-10px;
 }
 
 li {
@@ -111,6 +112,10 @@ p {
       }
     }
   }
+}
+.nav:hover{
+  opacity: 0.8;
+  transition: 0.3s;
 }
 
 .logo {
@@ -267,49 +272,101 @@ p {
 
 .mainvisual {
   width: 100vw;
-
+  // position: relative;
+  // top:100px;
   @include pc {
     display: flex;
+    vertical-align: bottom;
   }
 
-  ul {
-    margin-left: -50px;
+  .fade__img_container {
+    // margin-left: -10px;
     position: relative;
-
+    height:300px;
+    width:100%;
+    
     @include pc {
-      position: relative;
-      right:-20px;
-      margin: 0 0 0 100px;
-
+      margin: 0 0 0 30%;
+      height:720px;
+      width:80%;
     }
   }
-
-  ul::after {
+  .fade__list {
+    opacity: 0;
     position: absolute;
-    content: '';
     top: 0;
-    bottom: 0;
-    left: 40px;
-    right: 0;
-    box-shadow: inset 0 0 10px 15px #FFF;
+    left: 0;
+    // width: 70%;
+    height:720px;
+    animation: fade 15s infinite;
+    .fade__img{
+      height:300px;
+      width:100vw;
+      object-fit: cover;
+      // position:relative;
+      box-shadow: 0 0 5px 5px rgba(103, 103, 103, 0.3);
+      @include pc{
+        height:720px;
+      }
 
+    }
   }
 
-  img {
-    height: 300px;
-    width: 100%;
-    object-fit: cover;
+  .fade__list:nth-child(1) {
+    animation-delay: 0s;
+  }
+  /*
+  2枚目の画像のアニメーション実行タイミングを設定
+  「animation-delay: 5s;」で5秒後に実行
+  */
+  .fade__list:nth-child(2) {
+    animation-delay: 5s;
+  }
+  /*
+  3枚目の画像のアニメーション実行タイミングを設定
+  「animation-delay: 10s;」で10秒後に実行
+  */
+  .fade__list:nth-child(3) {
+    animation-delay: 10s;
+  }
 
-    @include pc {
-      display: flex;
+  // .fade__img::after {
+  //   position: absolute;
+  //   content: '';
+  //   top: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   right: 0;
+  //   box-shadow: inset 0 0 10px 15px #FFF;
+  //     @include pc {
+  //       left: 160;
+  //       right: -120;
+  //     }
+  // }
 
-      height: 720px;
-    }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  15% {
+    opacity: 1;
+  }
+  30% {
+    opacity: 1;
+  }
+  45% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
 .mainvisual__container {
   text-align: left;
+
 
   .mainvisual__text {
     margin-left: 15px;
@@ -324,11 +381,11 @@ p {
 }
 
 .intro {
-  margin: 0 auto;
+  margin: 30px auto;
   position: relative;
   left: 0;
   right: 0;
-  width: 100%;
+  width: 100vw;
 
   .intro__box {
     padding: 10px 0;
@@ -339,9 +396,10 @@ p {
   .intro__content {
     display: flex;
     background-color: #fff;
-    height: 119px;
+    height: auto;
     padding: 18px 21px;
     box-sizing: border-box;
+    overflow: hidden;
     img {
       margin-top: 10px;
     }
@@ -350,13 +408,13 @@ p {
       margin: 0 20px;
       height: 40%;
       vertical-align: middle;
-
       h3 {
-        margin: 0 auto;
+        margin: 20 auto;
       }
 
       p {
         font-size: 18px;
+        margin: 10 auto;
       }
     }
   }
@@ -368,7 +426,7 @@ p {
     left: 0;
     right: 16px;
     text-align: left;
-
+    animation: slide-left 1.0s ease-out 0s 1 forwards;
     @include pc {
       width:50vw;
       position: relative;
@@ -382,6 +440,22 @@ p {
       // object-fit: cover;
       // padding:10px 10px;
     }
+
+    .intro__content .slide-left {
+      animation: slide-left 0.5s ease-out 0s 1 forwards;
+    }
+    .intro__content .slide-right {
+      animation: slide-right 0.5s ease-out 0s 1 forwards;
+    }
+    @keyframes slide-left {
+      0% {
+        transform: translateX(-50%);
+      }
+      100% {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
   }
 
   .intro__content_right {
@@ -391,7 +465,7 @@ p {
     left: 16px;
     right: 0;
     text-align: left;
-
+    animation: slide-right 1.0s ease-out 0s 1 forwards;
     @include pc {
       width:50vw;
       position: relative;
@@ -404,6 +478,15 @@ p {
       height: 80%;
       // object-fit: cover;
       // padding:10px 10px;
+    }
+    @keyframes slide-right {
+      0% {
+        transform: translateX(50%);
+      }
+      100% {
+        opacity: 1;
+        transform: translateX(0);
+      }
     }
   }
 }
@@ -421,6 +504,7 @@ p {
 
 .about {
   background-image: url("../img/bg.gif");
+  width: 100vw;
   object-fit: cover;
   margin: 10px auto;
   padding: 40px 16px 60px 16px;
@@ -468,11 +552,27 @@ p {
   }
 }
 
-
-
+.student{
+  width:100vw;
+}
 .student__box {
   position: relative;
 }
+.student__content{
+  @include pc{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    margin:30px auto;
+  }
+}
+.student__content_reverse{
+  @include pc{
+    display: flex;
+    flex-direction: row;
+  }
+}
+
 
 .student__content_text {
   margin: 0 auto;
@@ -481,6 +581,10 @@ p {
   padding: 10px;
   border-radius: 8px;
   width: 343px;
+  @include pc{
+    margin: 0 0;
+    width: 514px;
+  }
 }
 
 .student__content_text:before {
@@ -491,10 +595,41 @@ p {
   border-style: solid;
   border-width: 10px;
   border-color: #E9F1FB transparent transparent transparent;
+  @include pc{
+    content: '';
+    position: absolute;
+    top: 42%;
+    left: -3.5%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: transparent  #E9F1FB transparent transparent ;
+  }
+}
+
+.student__content_text.reverse:before {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 48%;
+  border-style: solid;
+  border-width: 10px;
+  border-color: #E9F1FB transparent transparent transparent;
+  @include pc{
+    content: '';
+    position: absolute;
+    top: 42%;
+    left: 100%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: transparent  transparent transparent #E9F1FB;
+  }
 }
 
 .student__content_intro {
   margin: 30px auto;
+  @include pc{
+    margin: 0 30px;
+  }
 }
 
 .student__back {
@@ -502,6 +637,9 @@ p {
   border-radius: 50%;
   width: 120px;
   margin: 0 auto;
+  // @include pc{
+  //   margin: 0 0;
+  // }
 
   img {
     opacity: 2;
@@ -516,6 +654,7 @@ p {
 .text__container {
   margin: 80px auto;
   text-align: center;
+  width:100vw;
 
   h2 {
     font-size: 24px;
@@ -527,9 +666,34 @@ p {
   }
 }
 
+.student__content .balloon {
+  animation: balloon 0.5s ease-out 0s 1 forwards;
+}
+/*
+アニメーション処理
+
+最初は「transform: scale(0.1);」で要素を小さくした状態で、「opacity: 0;」で非表示にしておく
+0.5秒かけて要素を表示させながら元のサイズへ戻す
+*/
+@keyframes balloon {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.footer{
+  width:100vw;
+  position:relative;
+  bottom:0;
+}
 
 .sitemap {
-  margin: 62px auto;
+  margin: 62px auto 0;
   background-color: #E8E8E8;
 
   .sitemap__grid {
@@ -545,9 +709,10 @@ p {
     }
   }
 
-  p {
+  .credit {
     font-size: 10px;
     font-weight: normal;
+    margin-bottom:0;
   }
 }
 
